2006-12-07  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Suffix method names that are already registered with an integer value
	  instead of prefixing with 'osa_' as there might be more than 2 duplicates ;
	- Register the ID property if not already defined.

2006-11-20  Jean-Pierre M.  <jeanpierre@gmail.com>

	* sample/iTunes_artwork.rb:
	Use the artwork format as the temporary file extension.

2006-11-20  Laurent Sansonetti  <lsansonetti@apple.com>

	* README:
	Revised.

	* src/rbosa.c:
	Make sure to swap the data of 'type' coerced descriptors.

	* src/lib/rbosa.rb:
	- Better translation of 'type' from OSA to Ruby ;
	- Support for some picture types ;
	- Fixed conversion handlers to not use 'self'.

	* sample/iTunes_artwork.rb,
	  sample/iChat_image.rb:
	Added new samples.

2006-11-19  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Convert four char codes to the Mac Roman encoding before using them,
	  as otherwise they could be considered as 5 bytes strings (ex. BBEdit) ;
	- Remove invalid characters when generating constants.

	* sample/Finder_show_desktop.rb,
	  sample/BBEdit_unix_script.rb:
	Added new samples.

2006-11-04  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Translate 'alis' OSA types to Ruby file paths.

2006-10-30  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  sample/*.rb:
	Changed the "require 'rubygems'..." expressions to make them compatible
	with Ruby 1.8.2. 

	* src/lib/rbosa.rb,
	  src/rbosa.c:
	Added support to convert Hash objects to OSA 'record' types.

2006-09-28  James MacAulay  <jmacaulay@gmail.com>

	* src/lib/rbosa.rb:
	- Reverted to 0.0.11 handling of 'comp' objects (unpacked as Quad integers 
	  again now) ;
	- Added handling for 'sing' objects (they're floats) ;
	- Added handling for when __type__ is 'type' and __data__ is 'msng'.
	  It seems that this is meant to suggest "missing" values, since this is 