@@ -1,3 +1,14 @@
+2006-12-27  Vincent Isambart  <vincent.isambart@gmail.com>
+
+	* src/lib/rbosa.rb:
+	- Fixed a bug when generating setter methods ;
+	- Uses UTF8 strings by default.
+
+2006-12-27  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* sample/TextEdit_hello_world.rb:
+	Removed experimental code.
+
 2006-12-07  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* src/lib/rbosa.rb:
